@@ -1,0 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Crash when trying to get filename from custom URL</title>
+    </head>
+    <body>
+        <a href="qute://">download</a>
+    </body>
+</html>
